[gd_scene load_steps=7 format=2]

[ext_resource path="res://WorldGeneration/WorldGenerater.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tiles/Solids/PlaceTiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://WorldGeneration/World.gd" type="Script" id=4]
[ext_resource path="res://Tiles/Ground/FireRocks.png" type="Texture" id=5]
[ext_resource path="res://WorldGeneration/Ship.tscn" type="PackedScene" id=6]

[node name="World" type="Node2D" groups=[
"world",
]]
script = ExtResource( 4 )

[node name="WorldGeneration" type="Node" parent="."]
script = ExtResource( 1 )

[node name="BackgroundHelper" type="Node2D" parent="."]
z_index = -1

[node name="BackGround" type="TextureRect" parent="BackgroundHelper"]
margin_left = -300.795
margin_top = -199.735
margin_right = 599.205
margin_bottom = 400.265
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Props" type="YSort" parent="."]

[node name="Player" parent="Props" instance=ExtResource( 2 )]
position = Vector2( 8, 8 )

[node name="PlaceTiles" parent="Props" instance=ExtResource( 3 )]

[node name="Ship" parent="Props" instance=ExtResource( 6 )]
z_index = 1

[node name="Atmosphere" type="CanvasModulate" parent="."]

[connection signal="tree_entered" from="." to="." method="_on_World_tree_entered"]
[connection signal="removeTile" from="Props/Player" to="." method="_on_player_removeTile"]

[editable path="Props/Player"]
[editable path="Props/Player/Hurtbox"]
[editable path="Props/Player/SoftCollision"]
